com.top_logic.themes.core/src/main/webapp/style/form.css
/* ... */
.rf_inputCell.rf_labelAfter label {
	padding-left: var(--spacing-02);
}

.rf_inputCell .ace_editor div,
.rf_inputCell .ace_editor {
	line-height: 24px;
}

.rf_invisible {
	display: none;	
}

.i18nStringTable p {
	margin-top: 0px;
}

.tl-i18n-row {
	display: flex;
	gap: var(--spacing-02);
	margin: var(--spacing-02) 0;
}

.tl-i18n-lang {
	min-width: 10ex;
}

.tl-i18n-input {
	flex-grow: 1;
	display: flex;
}

.tl-i18n-input > .cTextInput {
	flex-grow: 1;
}

.rf_content table.schedulingAlgorithm {
	width: calc(100% - 60px);
}

*:not(.sizeSet) > .rf_cell .cIntegerInput > .cTextInput:not(.searchIrrelevant) .is-input {
	width: auto;
}

.rf_firstColumn .is-radio,
.rf_firstColumn .is-checkbox,
.rf_firstColumn input.tristate {
	margin-left: 0px;
	margin-right: 5px;
}

.rf_inputCell .rightAlign {
	text-align: right;
	padding-right: 5px;
}

.rf_groupCell {
	display: grid;
	grid-template-columns: 100%;
	grid-template-rows: minmax(22px, max-content) 1fr;
	grid-gap: 0px;
	border: 1px solid var(--border-subtle);
	margin-top: var(--spacing-02);
	min-width: -moz-min-content;    /* Firefox */
	min-width: -webkit-min-content; /* Chrome */
	min-width: min-content;
	height: max-content;
}

.rf_groupCell .rf_groupCell {
    margin-top: 0;
}

.rf_groupCell > .rf_header {
	border-top: none;
}

.rf_groupCell.noLegend {
	grid-template-rows: 1fr;
}

.rf_groupCell.noBorder {
	border: 0px;
}

.rf_groupCell .rf_header {
    grid-row: 1;
    grid-column: 1;
    display: flex;
    align-items: center;
    gap: var(--spacing-02);
    color: var(--highlight-fg, inherit);
    background: var(--highlight-bg, var(--layer));
    padding: var(--spacing-02) var(--spacing-03);
    white-space: nowrap;
    height: 2.5rem;
    box-sizing: border-box;
    overflow: hidden;
}

.rf_groupCell .rf_header:hover {
	background: var(--highlight-bg--hover, var(--layer-hover));
}

.rf_groupCell .rf_header a:hover {
	text-decoration: none;
}

.rf_groupCell.noLegend > .rf_header {
	background: transparent;
}

.rf_groupCell .rf_header select.tl-select,
.rf_groupCell .rf_header label {
	font-weight: bold;
	margin-bottom: 0px;
	text-overflow: ellipsis;
	overflow: hidden;
}

.rf_inputCell label {
	padding-right: 4px;
}

.rf_descriptionCell {
	display: table;
	padding-top: 8px;
	grid-column: 1 / -1;
}

.rf_label .cCheckbox,
.rf_label .cIconSelect {
	display: inline-block;
	width: 20px;
	vertical-align: middle;
} 

.rf_hr {
	height: 0px;
	grid-column: 1 / -1;
    margin-top: 5px;
}

.rf_hr.visible {
	border-top: 1px solid #F6F7F8; 
    border-bottom: 1px solid #E2E5E9; 
    margin-bottom: 10px;
}

.rf_descriptionContainer {
	display: grid;
	grid-auto-flow: row;
	grid-gap: var(--spacing-01) var(--spacing-01);
	grid-auto-rows: minmax(24px, max-content);
}

.rf_keepInline {
	display: inline;
}

.rf_inputCell.keepInline {
	margin-bottom: 10px;	
}

.cFormEditorDisplay .hidden, 
.hidden { 
	display: none; 
}

.cFormEditorPreview .rf_dropTarget { 
	height: calc(100% - 2 * var(--spacing-03));
}

.rf_editor, .cFormEditorPreview.rf_dropTarget { 
	height: 100%;
}

.rf_dropTarget { 
	min-height: 24px;
}

.rf_dropTarget > .cFormEditorDisplay,
.rf_dropTarget > .cFormEditorToolbar { 
	padding: 10px;
	height: calc(100% - 20px);
}

.cFormEditorPreview.rf_highlighted [data-type = 'columns'] .rf_groupCell,
.cFormEditorPreview.rf_highlighted .rf_dragElement .rf_inputCell,
.cFormEditorPreview.rf_highlighted .rf_dragElement .rf_table {
	background: rgba(255,255,255,0.6);
	border-radius: 0px
}

.rf_frame {
	min-height: 24px;
}

.cFormEditorToolbox [data-tool=true].rf_dragElement {
    display: inline-block;
    overflow: hidden;
    width: calc(50% - var(--spacing-02));
    margin-bottom: var(--spacing-02);
}

.cFormEditorToolbox [data-tool=true].rf_dragElement:nth-child(2n+1) {
    margin-right: var(--spacing-02);
}

.cFormEditorToolbox [data-tool=true] > .attribute {
	display: inline-flex;
	justify-content: flex-start;
	align-items: center;
	height: 2rem; /* 32px height */
	border-radius: var(--corner-radius);
	color: var(--button-secondary);
	background: var(--background);
	box-shadow: inset 0px 0px 0px 2px var(--button-secondary);
	width: 100%;
	padding: 0 var(--spacing-02);
	box-sizing: border-box;
	white-space: nowrap;
	text-overflow: ellipsis;
    overflow: hidden;
    font-family: var(--font-family);
    font-size: var(--body-02-font-size);
    line-height: var(--body-02-line-height);
    letter-spacing: var(--body-02-letter-spacing);
}

.cFormEditorToolbox [data-tool=true] > .attribute:hover {
	color: var(--text-on-color);
	background: var(--button-secondary-hover);
	box-shadow: inset 0px 0px 0px 2px var(--button-secondary-hover);
}

.cFormEditorToolbox [data-tool=true] > .attribute > .type-image {
	display: inline-flex;
}

.cFormEditorDisplay [data-tool=false] > .attribute {
	color: var(--text-secondary);
}

.cFormEditorDisplay [data-tool=false] > .attribute:hover {
	color: var(--text-primary);
}

/* form editor icons */
[data-tool=true] > .attribute .type-image > .tool {
	background-color: var(--BUTTON_COLOR);
	width: 10px;
	height: 10px;
	display: inline-block;
}

[data-tool=true] > .attribute:hover .type-image > .tool {
	background-color: var(--BUTTON_COLOR_HOVER);
}

.cFormEditorDisplay.edit .rf_wrapper:not(.hover):hover > .rf_container {
	margin-left: 20px;
	min-width: calc(100% - 20px);
}

.rf_editor > .cFormEditorPreview:not(.rf_highlighted) > .cFormEditorDisplay.edit .rf_wrapper:not(.hover):hover {
	background-image: var(--FORM_EDITOR_BUTTON_MOVE);
	background-repeat: no-repeat;
	background-position: left center; 
}

.rf_frame.showBorder {
	border: 1px solid #DFE6F0;
}

.cFormEditorPreview.rf_highlighted .rf_inputCell,  
.cFormEditorPreview.rf_highlighted .rf_dragElement .rf_table {
	border: 1px dotted grey;
}

/* disable default drag and drop for images because icons and labels can be splitted in this case */
.rf_dropTarget img {
	user-drag: none; 
	-webkit-user-drag: none;
}
/* ... */

